--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "framework": "nextjs",
-  "env": {
-    "SKIP_ENV_VALIDATION": "1",
-    "NEXT_TELEMETRY_DISABLED": "1"
-  }
+  "framework": "nextjs"
 }
